# fastapi_sandbox

./: .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  pyproject.toml
fast_api_sandbox/: __main__.py  app.py
src/: __main__.py  app.py  db_service.py  dependencies.py  models.py
src/api/: health_check.py
src/controlers/: health_check.py
src/routes/: customer.py
src/services/: db.py  repository.py
tests/: __init__.py  conftest.py  test_fast_api_sandbox.py  test_health_check.py  test_models.py
tests/controlers/: test_health_check.py
tests/services/: test_db_repository.py
