[tool.poetry]
name = "fast_api_sandbox"
version = "0.1.0"
description = ""
authors = ["csestelo <sestelos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.34"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.942"
coverage = "^6.3.2"
requests = "^2.27.1"
httpx = "^0.22.0"
pytest-trio = "^0.7.0"
asyncpg = "^0.25.0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "tests/*"]

[tool.coverage.report]
fail_under = 90

[tool.mypy]
plugins = "sqlmypy"
